--- a/interests.html
+++ b/interests.html
@@ -196,8 +196,9 @@
         </div>
 
     </footer>
+    <!-- <script> var APIKey = "AIzaSyBAZfE_4XcF47y38JiwDBrbN08IWrSgxm8";</script> -->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAZfE_4XcF47y38JiwDBrbN08IWrSgxm8&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
 </body>
 
