--- a/interests.html
+++ b/interests.html
@@ -197,7 +197,7 @@
 
     </footer>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAZfE_4XcF47y38JiwDBrbN08IWrSgxm8&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=DELETED&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
 </body>
 
